# mitre-assistant

./: Cargo.toml  README.md  enterprise_subtechniques.txt  enterprise_techniques.txt  sample.json  techniques.json
.github/workflows/: rust.yml
src/: main.rs
src/modules/: mod.rs  parser.rs  searcher.rs  webclient.rs
src/structs/: enterprise.rs  errors.rs  mod.rs
src/utils/: args.rs  fshandler.rs  mod.rs  regexes.rs
