[package]
name = "mitre-assistant"
version = "0.0.1"
authors = ["dfirence <carlos.diaz.pro@gmail.com>"]
edition = "2018"
description = "A more flexible, useful and cooler Mitre ATT&CK Client"
readme = "README.md"
repository = "https://github.com/dfirence/mitre-assistant"
keywords = ["mitre-attack-client", "mitre-assistant", "mitre-cti-stix-client"]
categories = ["command-line-utilities"]
license = "MIT"

# Ignore Files
exclude = [
    "./target/*"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
regex = "1.3.9"
#tokio = { version = "0.2", features = ["full"] }
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
clap = "2.33.1"
walkdir = "2.3.1"
fs2 = "0.4.3"
sha2 = "0.8.1"
prettytable-rs = "^0.8"